# PCSC-EigenvalueProblems

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
doxygen_doc/html/: _all_eigen_method_8h_source.html  _formulas.dvi  _formulas.tex  _formulas_dark.dvi  _formulas_dark.tex  _general_method_8h_source.html  _inverse_power_method_8h_source.html  _inverse_power_method_shifted_8h_source.html  _power_method_8h_source.html  _power_method_all_8h_source.html  _power_method_shifted_8h_source.html  _q_r_method_8h_source.html  _read_files_8h_source.html  _single_eigen_method_8h_source.html  annotated.html  class_all_eigen_method-members.html  class_all_eigen_method.html  class_binary_reader-members.html  class_binary_reader.html  class_c_s_v_reader-members.html  class_c_s_v_reader.html  class_configs-members.html  class_configs.html  class_eigenvalue_calculation_method-members.html  class_eigenvalue_calculation_method.html  class_file_reader-members.html  class_file_reader.html  class_general_eigen_method-members.html  class_general_eigen_method.html  class_input_parser-members.html  class_input_parser.html  class_inverse_power_method-members.html  class_inverse_power_method.html  class_inverse_power_method_with_shift-members.html  class_inverse_power_method_with_shift.html  class_power_method-members.html  class_power_method.html  class_power_method_all-members.html  class_power_method_all.html  class_power_method_with_shift-members.html  (+16 more)
doxygen_doc/html/search/: all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  classes_0.js  classes_2.js  classes_3.js  classes_5.js  classes_7.js  classes_9.js  functions_0.js  functions_1.js  pages_0.js  searchdata.js
src/: AllEigenMethod.cpp  AllEigenMethod.h  GeneralMethod.cpp  GeneralMethod.h  InversePowerMethod.cpp  InversePowerMethod.h  InversePowerMethodShifted.cpp  InversePowerMethodShifted.h  PowerMethod.cpp  PowerMethod.h  PowerMethodAll.cpp  PowerMethodAll.h  PowerMethodShifted.cpp  PowerMethodShifted.h  QRMethod.cpp  QRMethod.h  ReadFiles.cpp  ReadFiles.h  SingleEigenMethod.cpp  SingleEigenMethod.h  eigensolver.cpp  main.cc  main.cpp  matrix.cpp  matrix.csv  try.cpp  try.h  unils.h
test/: TestInversePowerMethod.cpp  TestInversePowerMethodShifted.cpp  TestPowerMethod.cpp  TestPowerMethodAll.cpp  TestPowerMethodShifted.cpp  TestQRMethod.cpp  TestReadFiles.cpp  test.cc
